--- a/views/results.erb
+++ b/views/results.erb
@@ -1,4 +1,2 @@
-<h1>Your Piglatinized Phrase!</h1>
-
-<h2><%= @piglatin %></h2>
-
+<h1> Your Pig Latinized Phrase! </h1>
+<h2> <%= @piglatinize %> </h2>
