--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -7,9 +7,9 @@
   <body>
     <h1>Pig Latinizer!</h1>
     <form method="POST" action="/piglatinize">
-      <label for="phrase">Enter your phrase:</label>
-      <input type="text" id="phrase" name="user_phrase">
-      <input type="submit">
+      <label>Enter your phrase: <input type="text" name="user_phrase" /></label>
+      <input type="submit" id="Submit" />
     </form>
+   
   </body>
 </html>
