--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>title</title>
-  </head>
-  <body>
-    <h1>Pig Latinizer</h1>
-  
-  </body>
+<head>
+	<meta charset="UTF-8">
+	<title>title</title>
+</head>
+<body>
+	<h1>Pig Latinizer</h1>
+	<form method="POST" action="/">
+		<h2>Enter the text to be Pig Latinized: <input type="text"></h2>
+		<input type="submit">
+	</form>
+</body>
 </html>
