--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>title</title>
+	<title>Pig Latinizer</title>
 </head>
 <body>
-	<h1>Pig Latinizer</h1>
-	<form method="POST" action="/">
-		<h2>Enter the text to be Pig Latinized: <input type="text"></h2>
+	<h1>Pig Latinizer!</h1>
+	<form method="POST" action="/piglatinize">
+		<h2>Enter your phrase: <input type="text" name="user_phrase"></h2>
 		<input type="submit">
 	</form>
 </body>
