--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,7 +5,12 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-  
+    <h1>Pig Latinizer!</h1>
+    <label for="phrase">Enter your phrase:</label>
+    <form action="/piglatinize" method="POST">
+      <input type="text" name="user_phrase" placeholder="Enter to convert">
+      <input type="submit" id="Submit">
+    </form>
+
   </body>
 </html>
