--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,7 +5,13 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-  
+    <h1>Pig Latinizer!</h1>
+       <form action="/piglatinize" method="post">
+
+      Enter your phrase: <input type="text" name="user_phrase"><br>
+      <br>
+
+      <input type="submit" value="submit">
+      </form>
   </body>
 </html>
